# flick-phosh

./: .gitignore  .gitmodules  README.md  install.sh
apps/audiobooks/: audiobooks.desktop  main.qml  run_audiobooks.sh
apps/audiobooks/shared/: Theme.qml
apps/distract/: distract.desktop  main.qml  run_distract.sh
apps/distract/shared/: Haptic.qml  SwipeBackArea.qml  Theme.qml
apps/distract/sounds/: README.md
apps/flick/: FlickMain.qml  flick.desktop  main.qml  run_flick.sh
apps/flick/pages/: AppsPage.qml  ClaudePage.qml  EffectsPage.qml  ThemePage.qml
apps/music/: main.qml  music.desktop  run_music.sh
apps/music/shared/: Haptic.qml  SwipeBackArea.qml  Theme.qml  qmldir
apps/other-apps/: main.qml  run_other-apps.sh
flick-effects-rs/: Cargo.toml
flick-effects-rs/src/: capture.rs  config.rs  main.rs  touch.rs
lib/PholishBackend/: Haptic.qml  MediaController.qml  Scaling.qml  qmldir
scripts/: flick-app-launcher  flick-pkg  install-icons  phosh-icon-manager  scan-apps
services/mpris-bridge/: pholish-mpris.py  pholish-mpris.service
settings/: flick-settings  org.flick.Effects.gschema.xml  org.flick.Settings.desktop
shader-overlay/: flick-effects  flick-effects.desktop  flick-effects.service  install-effects
