[package]
name = "flick-effects"
version = "0.1.0"
edition = "2021"

[dependencies]
# GTK4 with layer shell for overlay
gtk4 = "0.7"
gtk4-layer-shell = "0.2"
glib = "0.18"
gdk4 = "0.7"

# EGL/OpenGL ES
khronos-egl = { version = "6.0", features = ["dynamic"] }
gl = "0.14"

# Input device handling
input-linux = "0.6"
nix = { version = "0.27", features = ["ioctl", "fs"] }

# Utilities
anyhow = "1.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

# Screen capture
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }

[profile.release]
opt-level = 3
lto = true
